2006-05-08  Carl Hetherington  <inkscape@carlh.net>

	* src/seltrans.cpp, src/snap.cpp, src/snap.h: fix ctrl-scaling
	when there is no snap.  More snapping cleanups.

2006-05-07  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* knot.h, knot.cpp, connector-context.cpp:
	  Fix glib-gobject-warnings for knots in the connector tool.

2006-05-07  Jon A. Cruz  <jon@joncruz.org>

	* src/document-subset.cpp:
	  Corrected two bugs, with the minor one hiding the more severe.

2006-05-06  MenTaLguY  <mental@rydia.net>

	* src/xml/repr-util.cpp, src/xml/repr.h:

	  add fixup for incorrect sodipodi namespace

2006-05-06  MenTaLguY  <mental@rydia.net>

	* doc/NewAppArchitecture/01-title.svg,
	  doc/NewAppArchitecture/04-current-main.svg,
	  doc/NewAppArchitecture/05-current-objects.svg,
	  doc/NewAppArchitecture/06-current-desktop-view.svg,
	  doc/NewAppArchitecture/07-current-problems.svg,
	  doc/NewAppArchitecture/08-inkscape-gtkmm.svg
	  doc/NewAppArchitecture/09-future-capabilities.svg,
	  doc/NewAppArchitecture/10-future-main.svg,
	  doc/NewAppArchitecture/11-future-ink-app.svg,
	  doc/NewAppArchitecture/12-future-run-modes.svg,
	  doc/NewAppArchitecture/13-future-ink-app-editor.svg,
	  doc/NewAppArchitecture/14-evolving.svg,
	  share/examples/art-nouveau-P3.svg,
	  share/examples/eastern-motive-P4G.svg,
	  share/examples/i18n.svg,
	  share/examples/markers.svg,
	  share/examples/tesselation-P3.svg,
	  share/examples/text-on-path.svg,
	  share/icons/David_icons.svg,
	  share/icons/icons.svg,
	  share/icons/legacy_icons.svg,
	  share/screens/about.svg,
	  share/templates/business_card_85x54mm.svg,
	  share/templates/default.cs.svg,
	  share/templates/default.lt.svg,
	  share/templates/default.pl.svg,
	  share/tutorials/gpl-2.svg,
	  share/tutorials/tutorial-advanced.es.svg,
	  share/tutorials/tutorial-advanced.fr.svg,
	  share/tutorials/tutorial-advanced.ja.svg,
	  share/tutorials/tutorial-advanced.sl.svg,
	  share/tutorials/tutorial-advanced.svg,